# spdx-tools

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CONSOLIDATION_SUMMARY.md  COVERAGE_100_PLAN.md  CURRENT_STATUS_AND_NEXT_STEPS.md  ENCODING_ERRORS_SUMMARY.md  ENTERPRISE_QUALITY_REVIEW.md  FILE_IO_OPTIMIZATION_SUMMARY.md  FINAL_COMPREHENSIVE_SUMMARY.md  FINAL_TEST_SUMMARY.md  GITHUB_ACTIONS_FIX.md  LICENSE  LICENSE_CACHING_SUMMARY.md  MAKEFILE.template  MAKEFILE_CLEANUP_SUMMARY.md  MANIFEST.in  MANUAL_COMPLETION_GUIDE.md  Makefile  Makefile.template  PERR-REVIEW.md  PR6_COMPLETE_SUMMARY.md  PR7_CONFLICT_RESOLUTION.md  PYPI_RELEASE_CHECKLIST.md  README.md  REFACTORING_PLAN.md  TEST_COVERAGE_SUMMARY.md  VERIFICATION_PLAN.md  cleanup_for_release.sh  coverage.json  encoding_test_fixes.patch  pr_body.md  pr_body_100_coverage.md  pr_body_encoding.md  pr_body_tests.md  pyproject.toml  todo.md
.github/workflows/: license-check.yml
docs/: CNAME  STYLE_GUIDE.md  configuration.md  dev-workflow.md  github-actions.md  pre-commit.md  usage.md
examples/: benchmark_cache.py  benchmark_io.py
scripts/: build.sh  bump_version.py  lint-markdown-summary.sh  lint-markdown.sh  release.sh  spdx_headers_cli.py
src/spdx_headers/: __init__.py  __main__.py  _version.py  cli.py  core.py  data.py  encoding.py  exceptions.py  generate_data.py  operations.py
src/spdx_headers/data/: spdx_license_data.json
tests/: __init__.py  conftest.py  test_cli.py  test_cli_extended.py  test_core.py  test_core_extended.py  test_data.py  test_data_extended.py  test_encoding.py  test_exceptions.py  test_file_processor.py  test_main.py  test_new_functionality.py  test_operations.py  test_operations_extended.py
