
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spdx-headers"
version = "1.0.3"
description = "A command-line tool for managing SPDX headers in Python source files"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Richard Majewski", email = "uglyegg@entropy.quest" }]
maintainers = [{ name = "Richard Majewski", email = "uglyegg@entropy.quest" }]
keywords = ["spdx", "license", "headers", "compliance", "copyright"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Software Distribution",
  "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
  "chardet>=5.2.0",
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "ruff>=0.5.0",
  "types-requests>=2.31.0.6",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pre-commit>=4.3.0",
  "hatch>=1.9.0",
  "build>=0.10.0",
  "twine>=4.0.0",
]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-mock>=3.10.0"]

[project.urls]
Homepage = "https://github.com/uglyegg/spdx-tools"
Repository = "https://github.com/uglyegg/spdx-tools"
Issues = "https://github.com/uglyegg/spdx-tools/issues"
Documentation = "https://github.com/uglyegg/spdx-tools#readme"
Changelog = "https://github.com/uglyegg/spdx-tools/blob/main/CHANGELOG.md"

[project.scripts]
spdx-headers = "spdx_headers.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spdx_headers"]

[tool.hatch.build.targets.wheel.shared-data]
"src/spdx_headers/data" = "spdx_headers/data"

[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | _version.py
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["spdx_headers"]
skip_glob = ["*/_version.py"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["tomli", "tomllib"]
ignore_missing_imports = true

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E203"]
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = "src"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.spdx-headers]
exclude = ["_version.py"]
